[package]
name = "ryancgibson"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
askama = "0.12.1"
axum = "0.7.5"
dotenv = "0.15.0"
futures = "0.3.30"
lazy_static = "1.5.0"
reqwest = "0.12.5"
sanity = { git = "https://github.com/gibsorya/sanity.rs" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
shuttle-shared-db = { version = "0.47.0", features = ["postgres"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing-subscriber = "0.3.18"
url = "2.5.2"
